fixed overlapping designs

--- a/stylesheet/about-us-styles.css
+++ b/stylesheet/about-us-styles.css
@@ -73,13 +73,13 @@
 .mission-vision-container{
     width: 100%;
     max-width: 1960px;
-    height: 100vh;
+    height: auto;
     display: flex;
-    max-height: 1080px;
     justify-content: center;
     align-items: center;
     margin: auto;
     text-align: center;
+    padding: 5vw, 2vw, 5vw, 2vw;
 }
 .row{
     width: 90%;
@@ -103,6 +103,8 @@
     width: 40vw;
     max-width: 862px;
     margin: auto;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
 }
 .content-text-container p, .content-text-container h1{
     width: 80%;
@@ -114,14 +116,18 @@
 }
 
 .mission-card{
-    background-image: linear-gradient(rgba(157, 57, 214, 0.2), rgba(118, 69, 235, 0.4)), url(../images/imghand.jpg);
+    background-image:  linear-gradient(rgba(157, 57, 214, 0.2),
+                        rgba(118, 69, 235, 0.4)),
+                        url(../images/imghand.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
 }
 .vision-card{
-    background-image: linear-gradient(rgba(22, 63, 12, 0.5), rgba(13, 56, 2, 0.5)), url(../images/garden.JPG);
+    background-image: linear-gradient(rgba(22, 63, 12, 0.5),
+                    rgba(13, 56, 2, 0.5)),
+                    url(../images/garden.JPG);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -137,7 +143,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 900px;
+    height: auto;
 }
 
 .service-title{
