--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -92,7 +92,7 @@ body{
     rgba(0, 0, 0, 0.3), 
     rgba(0, 0, 0, 0.6)
   ), url(../images/img2.jpg); 
-  background-size: fit;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   justify-content: center;
@@ -479,6 +479,25 @@ iframe{
   color: white;
   margin-top: 30px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* responsive elements */
 @media (max-width: 800px){
   .landing-page-container{
